syntax = "proto3";

package iop;
option go_package = "./iop";

message ValidateRequest {
  enum Type {
    unknown = 0;
    block = 1;
    transaction = 2;
  }
  Type type = 1;
  bytes hash = 2;
}

message ValidateResponse {
  bytes hash = 1;
  bool valid = 2;
  int64 blockNumber = 3;
  bytes signature = 4;
  bytes R = 5;
}

service OracleNode {
  rpc Validate(ValidateRequest) returns (ValidateResponse);
}
